crates/rurge-config/tests/snapshots/corpus__corpus__quick-start.snap
---
source: crates/rurge-config/tests/corpus.rs
expression: "(loaded.config.summary(), diags)"
---
- listeners: []
  policies:
    - ProxyA (https)
  groups:
    - "Proxy (select) -> [ProxyA, DIRECT]"
  rules:
    - "DOMAIN-SUFFIX,example.com,Proxy"
    - "GEOIP,CN,DIRECT"
    - "FINAL,Proxy"
  rulesets: []
  hosts: []
  keystore: []
  deferred: []
  unknown_sections: []
  managed: ~
- []
